--- a/client/src/components/styles/login.css
+++ b/client/src/components/styles/login.css
@@ -6,6 +6,13 @@
   font-family: 'Quicksand', sans-serif;
 }
 
+.container-auth{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 5rem;
+}
+
 .ring {
   position: relative;
   width: 500px;
@@ -16,18 +23,18 @@
 }
 
 .ring i {
-  --clr: #ffce2d;
+  --clr: #ffbe63a1;
 }
 .ring i:nth-child(2) {
-  --clr: #a17d05;
+  --clr: rgba(226, 175, 6, 0.637);
 }
 .ring i:nth-child(3) {
-  --clr: #695b0c;
+  --clr: #89653296;
 }
 .ring i {
   position: absolute;
   inset: 0;
-  border: 2px solid #fff;
+  border: 2px solid #eec67d52;
   transition: 0.5s;
 }
 .ring i:nth-child(1) {
@@ -79,4 +86,39 @@
 .login .inputBx {
   position: relative;
   width: 100%;
+}
+
+.inputBx input, .inputBx button {
+  position: relative; /* Добавлено для работы z-index */
+  z-index: 1; /* Установлено значение z-index для input */
+  /* Остальные стили */
+}
+
+.login .inputBx input {
+  position: relative;
+  width: 100%;
+  padding: 12px 20px;
+  background: transparent;
+  border: 2px solid #fff;
+  border-radius: 40px;
+  font-size: 1.2em;
+  color: #fff;
+  box-shadow: none;
+  outline: none;
+}
+
+.login .inputBx input::placeholder {
+  color: rgba(255, 255, 255, 0.75);
+}
+.login .links {
+  position: relative;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 20px;
+}
+.login .links a {
+  color: #fff;
+  text-decoration: none;
 }
