--- a/client/src/components/styles/LogaRega.css
+++ b/client/src/components/styles/LogaRega.css
@@ -3,7 +3,6 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: 'Quicksand', sans-serif;
 }
 
 .container-auth {
@@ -15,21 +14,21 @@
 
 .ring {
   position: relative;
-  width: 500px;
-  height: 500px;
+  width: 550px;
+  height: 550px;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
 .ring i {
-  --clr: #ffbe63a1;
+  --clr: #ffbe63;
 }
 .ring i:nth-child(2) {
-  --clr: rgba(226, 175, 6, 0.637);
+  --clr: #ac7933;
 }
 .ring i:nth-child(3) {
-  --clr: #89653296;
+  --clr: #896532;
 }
 .ring i {
   position: absolute;
@@ -89,7 +88,8 @@
 }
 
 .inputBx input,
-.inputBx button, .links {
+.inputBx button,
+.links {
   position: relative;
   z-index: 1;
 }
@@ -121,4 +121,71 @@
 .login .links a {
   color: #fff;
   text-decoration: none;
+}
+
+.formAuth {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.inputBx input {
+  border-radius: 1rem;
+  font-size: 1.5rem;
+  padding: 1.5rem;
+  margin: 1rem;
+  border: 1.5px solid #ffbe63;
+  background-color: #89653223;
+  color: #fcdaaa;
+}
+
+.formAuth h2 {
+  font-size: 3rem;
+  color: #fcdaaa;
+  margin: 1rem;
+  font-weight: 300;
+  font-family: 'Montserrat Alternates', sans-serif;
+}
+
+.inputBx button {
+  border-radius: 1rem;
+  font-size: 1.5rem;
+  font-family: 'Montserrat Alternates', sans-serif;
+  background-color: #eec67d00;
+  padding: 1rem;
+  color: #fcdaaa;
+  margin: 1rem;
+}
+
+.inputBx button:hover{
+  background-color: #ffbe63be;
+  padding: 1rem;
+  color: #3d2d17;
+}
+
+.formAuth form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.links p {
+  text-decoration: none;
+  font-family: 'Montserrat Alternates', sans-serif;
+  color: #fcdaaa;
+  font-weight: 200;
+}
+
+.links p:hover {
+  text-decoration: underline ;
+}
+
+.sign-up .inputBx input {
+  border-radius: 1rem;
+  padding: 1.2rem;
+  font-size: 1.5rem;
+  margin: 0.5rem;
+  border: 1.5px solid #ffbe63;
+  background-color: #89653223;
+  color: #fcdaaa;
 }
