--- a/client/src/components/styles/LogaRega.css
+++ b/client/src/components/styles/LogaRega.css
@@ -37,15 +37,15 @@
   transition: 0.5s;
 }
 .ring i:nth-child(1) {
-  border-radius: 38% 62% 63% 37% / 41% 44% 56% 59%;
+  /* border-radius: 38% 62% 63% 37% / 41% 44% 56% 59%; */
   animation: animate 6s linear infinite;
 }
 .ring i:nth-child(2) {
-  border-radius: 41% 44% 56% 59%/38% 62% 63% 37%;
+  /* border-radius: 41% 44% 56% 59%/38% 62% 63% 37%; */
   animation: animate 4s linear infinite;
 }
 .ring i:nth-child(3) {
-  border-radius: 41% 44% 56% 59%/38% 62% 63% 37%;
+  /* border-radius: 41% 44% 56% 59%/38% 62% 63% 37%; */
   animation: animate2 10s linear infinite;
 }
 .ring:hover i {
