--- a/client/src/components/styles/MainPage.css
+++ b/client/src/components/styles/MainPage.css
@@ -21,40 +21,21 @@
   height: 25rem;
   border-radius: 2rem;
 }
-.container .cocktail_title,
-.drink_title {
-  font-size: 1.5rem;
-  font-family: 'Montserrat Alternates', sans-serif;
-  background-image: linear-gradient(to right, #ffbe63, #896532);
-  -webkit-background-clip: text;
-  -moz-background-clip: text;
-  background-clip: text;
-  color: transparent;
-  margin: 1rem;
-}
 
 .categoryPopular {
   font-size: 2rem;
   margin: 2rem;
-  color: #fcb542;
+  color: #ffbe63;
 }
 
-.all_cards {
-  font-size: 2.25rem;
-  background-image: linear-gradient(#ffbe63, #896532);
-  -webkit-background-clip: text;
-  -moz-background-clip: text;
-  background-clip: text;
-  color: transparent;
-}
 
-.card_cocktail,
-.card_drink {
-  align-items: center;
-  margin: 3rem;
-  transition: transform 0.3s ease-in-out;
-}
-.card_cocktail:hover,
-.card_drink:hover {
-  transform: scale(1.05);
-}
+.Main {
+  height: 100%;
+  width:  118.75rem;
+  height: 800px;
+  margin: 0;
+  background-image: url('/public/img/main.png');
+  background-size: cover;
+  background-position: center;
+  border-bottom: 1.5px solid #DBB864;
+ }
