--- a/client/src/components/styles/Filter.css
+++ b/client/src/components/styles/Filter.css
@@ -13,9 +13,8 @@
   margin: 3rem;
   width: 85%;
   height: 5rem;
-  border-radius: 20px;
-  background-color: #ffd4971a;
-  border: 1px solid #db9b41c9;
+  border-bottom: 1px solid #db9b41c9;;
+
 }
 
 .categoryFilt,
