--- a/client/src/components/styles/CocktailCard.css
+++ b/client/src/components/styles/CocktailCard.css
@@ -5,7 +5,8 @@
   margin: 3rem;
   padding: 1rem;
   transition: transform 0.3s ease-in-out;
-
+  position: relative;
+  z-index: 1;
   border: 1px solid #dbb864;
   padding: 2px;
   position: relative;
@@ -18,6 +19,7 @@
   top: -8px;
   left: -8px;
   right: -8px;
+  z-index: -1;
   bottom: -8px;
   border: 2px solid #dbb864;
 }
