--- a/client/src/components/styles/Profile.css
+++ b/client/src/components/styles/Profile.css
@@ -41,7 +41,7 @@
   border: 1.5px solid #ffbe63;
   border-radius: 0.5rem;
 }
-
+.btn-back,
 .btn-update-profile,
 .btn-add-cocktail {
   border-radius: 0.1rem;
@@ -55,14 +55,14 @@
   border: 2px solid #ffbe63;
 }
 
-
+.btn-back p,
 .btn-add-cocktail p,
 .btn-update-profile p{
   border-radius: 0.1rem;
   padding: 0.4rem;
   border: 1px solid #ffbe63;
 }
-
+.btn-back:hover,
 .btn-update-profile:hover,
 .btn-add-cocktail:hover {
   background-color: #ffbe63be;
@@ -73,6 +73,7 @@
   border: 2px solid #3d2d17;
 }
 
+.btn-back p:hover,
 .btn-update-profile p:hover,
 .btn-add-cocktail p:hover{
   padding: 0.4rem;
