--- a/client/src/components/styles/Moderation.css
+++ b/client/src/components/styles/Moderation.css
@@ -12,7 +12,13 @@
   -moz-background-clip: text;
   background-clip: text;
   color: transparent;
+  margin: 0 2vw 4vw 0;
 }
 
-.moderationTitle
+.PageModeration img{  
+  width: 26vw;
+}
 
+.infoModeration{
+  display: flex;
+}
