--- a/client/src/components/styles/Profile.css
+++ b/client/src/components/styles/Profile.css
@@ -13,20 +13,20 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  border: 1px solid #ffbe63;
-  box-shadow: inset 0 2px 10px rgba(0, 0, 0, 0.5);
+  border: 0.1vw solid #ffbe63;
+  box-shadow: inset 0 0.5vw 1vw rgba(0, 0, 0, 0.5);
 }
 
 .ProfileCard img {
-  width: 500px;
+  width: 25vw;
   margin: 0 2rem 2rem 2rem;
-  border-radius: 5rem;
+  border-radius: 1rem;
 }
 
 .ProfileCard h1 {
   color: bisque;
-  font-size: 2rem;
-  margin: 2rem;
+  font-size: 2.1vw;
+  margin: 0 0 2rem 0;
 }
 
 .prof {
@@ -38,7 +38,7 @@
   margin-right: 3rem;
   display: flex;
   flex-direction: column;
-  border: 1.5px solid #ffbe63;
+  border: 0.1vw solid #ffbe63;
   border-radius: 0.5rem;
 }
 .btn-back,
@@ -52,7 +52,7 @@
   font-weight: 300;
   margin: 1rem;
   border-radius: 0.1rem;
-  border: 2px solid #ffbe63;
+  border: 0.2vw solid #ffbe63;
 }
 
 .btn-back p,
@@ -60,7 +60,7 @@
 .btn-update-profile p{
   border-radius: 0.1rem;
   padding: 0.4rem;
-  border: 1px solid #ffbe63;
+  border: 0.1vw solid #ffbe63;
 }
 .btn-back:hover,
 .btn-update-profile:hover,
@@ -70,14 +70,14 @@
   color: #3d2d17;
   font-weight: 400;
   /* box-shadow: inset 0 2px 10px rgba(0, 0, 0, 0.5); */
-  border: 2px solid #3d2d17;
+  border: 0.2vw solid #3d2d17;
 }
 
 .btn-back p:hover,
 .btn-update-profile p:hover,
 .btn-add-cocktail p:hover{
   padding: 0.4rem;
-  border: 1px solid #3d2d17;
+  border: 0.1vw solid #3d2d17;
 }
 
 .line {
@@ -90,7 +90,7 @@
 }
 .infoProfile div {
   color: aliceblue;
-  font-size: 1.6rem;
+  font-size: 1.5vw;
   padding: 0.5rem;
 }
 
@@ -131,7 +131,7 @@
 
 .gradient {
   position: relative;
-  padding: 20px;
+  padding: 3vw;
   color: white;
   background: linear-gradient(149deg, #fdca823d 0%, #e4b36a79 42%, #ad762d77 72%, #9e6e2b77 100%);
   background-size: 200% 200%;
@@ -168,8 +168,8 @@
 
 .ring1 {
   position: absolute;
-  width: 1200px;
-  height: 1200px;
+  width: 60vw;
+  height: 60vw;
   display: flex;
   justify-content: center;
   align-items: center;
