--- a/client/src/components/styles/Profile.css
+++ b/client/src/components/styles/Profile.css
@@ -31,6 +31,7 @@
 
 .prof {
   display: flex;
+  align-items: center;
   justify-content: space-between;
 }
 
@@ -43,46 +44,46 @@
 }
 .btn-back,
 .btn-update-profile,
-.btn-add-cocktail {
+.btn-add-cocktail,
+.btn-create-cocktail {
   border-radius: 0.1rem;
-  font-size: 1.5rem;
+  font-size: 1.2vw;
   background-color: #000000e3;
   padding: 0.5rem;
   color: #fcdaaa;
-  font-weight: 300;
-  margin: 1rem;
-  border-radius: 0.1rem;
+  font-weight: 400;
+  margin: 1vw;
   border: 0.2vw solid #ffbe63;
 }
 
 .btn-back p,
+.btn-create-cocktail p,
 .btn-add-cocktail p,
-.btn-update-profile p{
+.btn-update-profile p {
   border-radius: 0.1rem;
-  padding: 0.4rem;
+  padding: 0.3vw;
   border: 0.1vw solid #ffbe63;
 }
 .btn-back:hover,
+.btn-create-cocktail:hover,
 .btn-update-profile:hover,
 .btn-add-cocktail:hover {
   background-color: #ffbe63be;
-  padding:  0.5rem;
   color: #3d2d17;
-  font-weight: 400;
-  /* box-shadow: inset 0 2px 10px rgba(0, 0, 0, 0.5); */
   border: 0.2vw solid #3d2d17;
 }
 
 .btn-back p:hover,
+.btn-create-cocktail p:hover,
 .btn-update-profile p:hover,
-.btn-add-cocktail p:hover{
-  padding: 0.4rem;
+.btn-add-cocktail p:hover {
   border: 0.1vw solid #3d2d17;
 }
 
 .line {
   display: flex;
   font-weight: 400;
+  margin: auto 0;
 }
 
 .titleProf {
@@ -91,7 +92,7 @@
 .infoProfile div {
   color: aliceblue;
   font-size: 1.5vw;
-  padding: 0.5rem;
+  padding: 0.8vw;
 }
 
 .formAddCocktail {
@@ -165,7 +166,6 @@
   }
 }
 
-
 .ring1 {
   position: absolute;
   width: 60vw;
@@ -224,4 +224,24 @@
   }
 }
 
+@media (max-width: 800px) {
+  .prof {
+    display: flex;
+    margin: 0;
+    flex-direction: column;
+    align-items: center;
+  }
+  .infoProfile {
+    margin: 0;
+  }
+}
 
+@media (min-width: 1600px) {
+  .prof img {
+    width: 25vw;
+    margin: 0 3rem;
+  }
+  .infoProfile div {
+    padding: 0.5rem;
+  }
+}
