--- a/client/src/components/styles/CocktailCard.css
+++ b/client/src/components/styles/CocktailCard.css
@@ -36,13 +36,12 @@
   background-clip: text;
   color: transparent;
 }
-
-.container .cocktail_title,
+.cocktail_title
+.container ,
 .drink_title {
   font-size: 1vw;
   align-items: center;
   text-align: center;
-  padding: 1vw;
   font-family: 'Montserrat Alternates', sans-serif;
   background-image: linear-gradient(to right, #ffbe63, #896532);
   -webkit-background-clip: text;
@@ -50,7 +49,14 @@
   background-clip: text;
   color: transparent;
 }
+.container ,
+.drink_title{
+  padding: 1vw;
+}
 
+.cocktail_title{
+  
+}
 
 .button-container {
   position: absolute;
