--- a/client/src/components/styles/CocktailCard.css
+++ b/client/src/components/styles/CocktailCard.css
@@ -2,15 +2,16 @@
 .card_drink {
   align-items: center;
   width: 18vw;
-  height: 22vw;
+  height: 24vw;
   margin: 2rem;
   transition: transform 0.3s ease-in-out;
   position: relative;
   z-index: 1;
   border: 1px solid #dbb864;
-  padding: 1vw;
+  padding: 0.5vw;
   position: relative;
 }
+
 
 
 .card_cocktail::before,
@@ -40,7 +41,7 @@
 .cocktail_title,
 .container,
 .drink_title {
-  font-size: 1vw;
+  font-size: 1.2vw;
   align-items: center;
   text-align: center;
   font-family: 'Montserrat Alternates', sans-serif;
@@ -57,6 +58,7 @@
 
 .cocktail_title {
   padding: 0.2vw;
+  margin: 1rem;
 }
 
 .button-container {
