--- a/client/src/components/styles/ModalWindow.css
+++ b/client/src/components/styles/ModalWindow.css
@@ -1,5 +1,8 @@
 .ModalWindow {
   position: fixed;
+  display: flex ;
+  flex-direction: column;
+  align-items: center;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
@@ -21,4 +24,10 @@
   bottom: 0;
   background: rgba(0, 0, 0, 0.5);
   z-index: 1;
+}
+
+.modalerror{
+  font-size: 20px;
+  color: rgba(235, 183, 106, 0.953);
+  margin: 20px;
 }
