--- a/client/src/components/styles/Coach.css
+++ b/client/src/components/styles/Coach.css
@@ -4,6 +4,10 @@
   display: flex;
 }
 
+.allContainerFormula {
+  flex-direction: column;
+}
+
 .CoachPage {
   flex-direction: column;
   align-items: center;
@@ -48,9 +52,12 @@
   margin: 1rem;
 }
 
-.newContainerCardFormula {
-  width: 300px;
+.newContainerCardFormula,
+.containerCardFormula {
+  height: 300px;
   margin: 1rem;
+  display: flex;
+  width: 90rem;
 }
 
 .btnClose,
