--- a/client/src/components/styles/Profile.css
+++ b/client/src/components/styles/Profile.css
@@ -6,6 +6,16 @@
   font-family: 'Montserrat Alternates', sans-serif;
 }
 
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%; 
+  z-index: 1000; 
+  pointer-events: none; 
+ }
+
 .ProfileCard {
   margin: 3rem;
   border-radius: 0.5rem;
