--- a/client/src/components/styles/Coach.css
+++ b/client/src/components/styles/Coach.css
@@ -55,14 +55,16 @@
 
 .cardFormula {
   display: flex;
-  height: 10vw;
-  width: 10vw;
+  height: 12vw;
+  width: 12vw;
+  align-items: center;
   flex-direction: column;
+  padding: 1vw;
   align-items: center;
   background-color: #46311475;
   border-radius: 0.5rem;
-  padding: 2rem;
   margin: 1rem;
+  justify-content: center;
 }
 
 .cardFormula img {
@@ -71,9 +73,10 @@
 }
 
 .cardFormula p {
-  font-size: 0.7vw;
+  font-size: 1.1vw;
   color: #ffcf8d;
   margin: 5px 0;
+  text-align: center;
 }
 
 .newContainerCardFormula {
@@ -149,10 +152,35 @@
   align-items: center;
 }
 
+.cardFormulaNew{
+  display: flex;
+  height: 9vw;
+  width: 9vw;
+  align-items: center;
+  flex-direction: column;
+  padding: 1vw;
+  align-items: center;
+  background-color: #46311475;
+  border-radius: 0.5rem;
+  margin: 1rem;
+  justify-content: center;
+}
+
+.cardFormulaNew img {
+  width: 6vw;
+  margin: 0.2vw;
+  height: 6vw;
+}
+
+
 @media (max-width: 1200px) {
   .newContainerCardFormula {
     height: 19vw;
     margin: auto;
     width: 70vw;
+  }
+
+  .titleCocktailBtn{
+    font-size: 1.5rem;
   }
 }
