--- a/client/src/components/styles/ModalWindow.css
+++ b/client/src/components/styles/ModalWindow.css
@@ -2,7 +2,9 @@
   position: fixed;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
+  /* transform: translate(-50%, -50%); */
+  margin-left: auto;
+  margin-right: auto;
   background-color: #221707f3;
   padding: 7rem;
   border-radius: 1rem;
