--- a/client/src/components/styles/ModalWindow.css
+++ b/client/src/components/styles/ModalWindow.css
@@ -5,7 +5,7 @@
   align-items: center;
   background-color: #221707f3;
   border-radius: 1rem;
-  z-index: 2000;
+  z-index: 3000;
   box-shadow: 10px 10px 15px rgba(0, 0, 0, 0.25);
   border: 0.5px solid rgba(235, 183, 106, 0.953);
   overflow: hidden;
@@ -18,9 +18,24 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  transform: translate(-50%, -50%);
   top: 50%;
   left: 50%;
 }
+
+#modal-root {
+  position: fixed; 
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+ }
+
+
+
 .blur {
   position: fixed;
   top: 0;
