--- a/client/src/components/styles/Moderation.css
+++ b/client/src/components/styles/Moderation.css
@@ -15,6 +15,11 @@
   margin: 2rem;
 }
 
+.PageModeration .container .card_cocktail img{
+height: 80%;
+margin: 0.2vw;
+}
+
 .image-container {
   width: 30%;
 }
@@ -53,6 +58,8 @@
   font-size: 1.2rem;
   margin: 1rem 0;
   color: #ffe3bc;
+  word-spacing: 0.3rem;
+  letter-spacing: 0.2rem;
 }
 .btn-add-cocktail,
 .btn-create-select,
@@ -61,7 +68,7 @@
   border-radius: 0.2rem;
   background-color: #faddb4bb;
   border: 1.5px solid #ffbe63;
-  margin: 0.5rem 0;
+  margin: 0.5rem 0.5rem;
   padding: 1rem;
   font-size: 1rem;
   font-weight: 500;
@@ -88,7 +95,7 @@
   margin: 0.5rem 0.5rem 0.5rem 0.5rem;
   padding: 0.5rem;
   font-size: 1rem;
-  font-family: 'Montserrat Alternates', sans-serif;
+  font-family: 'Gatcby Two';
   font-weight: 500;
 }
 
@@ -104,12 +111,14 @@
 .add,
 .edit {
   font-size: 1vw;
+  font-family: 'Gerhaus';
 }
 
 
 .title {
   font-size: 1rem;
   color: #fcdaaa;
+  font-family: 'Gerhaus';
 }
 
 
@@ -122,6 +131,7 @@
   border-radius: 0.2rem;
   font-size: 1rem;
   padding: 0.5rem;
+  font-family: 'Gerhaus';
   margin: 0.5rem;
   border: 1.5px solid #ffbe63;
   background-color: #89653223;
