--- a/client/src/components/styles/CocktailCard.css
+++ b/client/src/components/styles/CocktailCard.css
@@ -38,13 +38,18 @@
   background-clip: text;
   color: transparent;
 }
+
+.all_cards:hover{
+  color: #eeac50;
+  text-decoration: overline;
+}
 .cocktail_title,
 .container,
 .drink_title {
   font-size: 1.2vw;
   align-items: center;
   text-align: center;
-  font-family: 'Montserrat Alternates', sans-serif;
+  font-family: 'Gerhaus';
   background-image: linear-gradient(to right, #ffbe63, #896532);
   -webkit-background-clip: text;
   -moz-background-clip: text;
