--- a/client/src/components/styles/Navbar.css
+++ b/client/src/components/styles/Navbar.css
@@ -2,7 +2,8 @@
 
 body {
   background-color: #151515;
-  font-family: 'Montserrat Alternates', sans-serif;
+  font-family: 'Gatcby Two';
+  letter-spacing: 2px;
 }
 
 .top_navbar {
@@ -15,7 +16,7 @@ body {
 }
 
 .top_navbar span {
-  font-size: 1.5vw;
+  font-size: 2vw;
   background-image: linear-gradient(to right, #ffbe63, #896532);
   -webkit-background-clip: text;
   -moz-background-clip: text;
@@ -30,4 +31,14 @@ span:hover {
 
 .logo {
   width: 7vw;
+}
+
+@font-face {
+  font-family: 'Gatcby One';
+  src: url('./fonts/Great Gatsby Two.ttf');
+}
+
+@font-face {
+  font-family: 'Gerhaus';
+  src: url('./fonts/Gerhaus.ttf');
 }
