--- a/client/src/components/styles/CocktailCard.css
+++ b/client/src/components/styles/CocktailCard.css
@@ -46,10 +46,10 @@
 .cocktail_title,
 .container,
 .drink_title {
-  font-size: 1.2vw;
+  font-size: 1.5vw;
   align-items: center;
   text-align: center;
-  font-family: 'Gerhaus';
+  font-family: "Philosopher", sans-serif;
   background-image: linear-gradient(to right, #ffbe63, #896532);
   -webkit-background-clip: text;
   -moz-background-clip: text;
