--- a/client/src/components/styles/Navbar.css
+++ b/client/src/components/styles/Navbar.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=DotGothic16&family=Montserrat+Alternates:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Rubik+Glitch+Pop&family=Underdog&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=DotGothic16&family=Montserrat+Alternates:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Philosopher:ital,wght@0,400;0,700;1,400;1,700&family=Rubik+Glitch+Pop&family=Underdog&family=Zen+Tokyo+Zoo&display=swap');
 body {
   background-color: #151515;
   font-family: 'Gatcby Two';
@@ -39,6 +39,11 @@ span:hover {
 }
 
 @font-face {
-  font-family: 'Gerhaus';
+  font-family: "Philosopher", sans-serif;
   src: url('./fonts/Gerhaus.ttf');
+}
+
+@font-face {
+  font-family: "Philosopher", sans-serif;
+  src: url('./fonts/ReadexPro-Regular.ttf');
 }
