--- a/client/src/components/styles/ModalWindow.css
+++ b/client/src/components/styles/ModalWindow.css
@@ -14,6 +14,7 @@
 }
 
 .modal-root {
+  z-index: 3000;
   position: absolute;
   display: flex;
   justify-content: center;
@@ -22,17 +23,6 @@
   top: 50%;
   left: 50%;
 }
-
-#modal-root {
-  position: fixed; 
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
- }
 
 
 
