--- a/client/src/components/styles/ModalWindow.css
+++ b/client/src/components/styles/ModalWindow.css
@@ -1,5 +1,5 @@
 .ModalWindow {
-  position: absolute;
+  position: fixed;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -10,17 +10,17 @@
   border: 0.5px solid rgba(235, 183, 106, 0.953);
   overflow: hidden;
   padding: 4vw;
-  margin-bottom: 10rem;
+  margin-top: -66px;
 }
 
 .modal-root {
   z-index: 3000;
-  position: absolute;
+  position: fixed;
   display: flex;
   justify-content: center;
   align-items: center;
   transform: translate(-50%, -50%);
-  top: 50%;
+  top: 40%;
   left: 50%;
 }
 
